# ricardo-ruiz

./: README.md
Cadastro.WebAPI/: Cadastro.WebAPI.sln
Cadastro.WebAPI/Cadastro.App/Cadastro.App/: ApiService.cs  App.xaml  App.xaml.cs  Cadastro.App.csproj  MainPage.xaml  MainPage.xaml.cs  UserRegisterPage.xaml  UserRegisterPage.xaml.cs
Cadastro.WebAPI/Cadastro.App/Cadastro.App.Android/: Cadastro.App.Android.csproj  MainActivity.cs
Cadastro.WebAPI/Cadastro.App/Cadastro.App.UWP/: App.xaml  App.xaml.cs  Cadastro.App.UWP.csproj  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
Cadastro.WebAPI/Cadastro.App/Cadastro.App/Entities/: User.cs
Cadastro.WebAPI/Cadastro.WebAPI/: Cadastro.WebAPI.csproj  Dockerfile  Program.cs  Startup.cs  appsettings.json  docker-compose.yml
Cadastro.WebAPI/Cadastro.WebAPI/Controllers/: UsersController.cs
Cadastro.WebAPI/Cadastro.WebAPI/Data/: MyLogEvents.cs  UserContext.cs
Cadastro.WebAPI/Cadastro.WebAPI/Migrations/: 20210708020032_initial.Designer.cs  20210708020032_initial.cs  20210708035433_segunda.Designer.cs  20210708035433_segunda.cs  20210708035546_terceira.Designer.cs  20210708035546_terceira.cs  20210708040208_quarta.Designer.cs  20210708040208_quarta.cs  20210708044123_cinco.Designer.cs  20210708044123_cinco.cs  20210709034432_linux.Designer.cs  20210709034432_linux.cs  20210712215328_Docer.Designer.cs  20210712215328_Docer.cs  20210712215341_Docker.Designer.cs  20210712215341_Docker.cs  20210712223012_Docker2.Designer.cs  20210712223012_Docker2.cs  UserContextModelSnapshot.cs
Cadastro.WebAPI/Cadastro.WebAPI/Models/: User.cs
Cadastro.WebAPI/Cadastro.WebAPI/Properties/: launchSettings.json
Cadastro.WebAPI/Cadastro.WebAPI/Services/: DbManagementService.cs
Cadastro.WebAPI/UnitTests/: ControllerTest.cs  UnitTests.csproj
Simulador.Bolsa/: .Order.h.swp  Application.cpp  Application.h  CMakeLists.txt  Main.cpp  Order.h  OrderRepository.cpp  OrderRepository.h  OrderService.h  RunDebug.bat  Simulador.Bolsa.cfg  Simulador.Bolsa.cpp  Ui.cpp  Ui.h
Simulador.Bolsa.Client/: Application.cpp  Application.h  CMakeLists.txt  Order.h  Repo.cpp  Repo.h  RunDebug.bat  Simulador.Bolsa.Client.cfg  Simulador.Bolsa.Client.cpp
Simulador.Bolsa.Client/store/: FIX.4.2-CLIENT1-SIMULADOR.ORDEM.body  FIX.4.2-CLIENT1-SIMULADOR.ORDEM.header  FIX.4.2-CLIENT1-SIMULADOR.ORDEM.seqnums  FIX.4.2-CLIENT1-SIMULADOR.ORDEM.session
Simulador.Bolsa/quickfix/: AAACMakeLists.txt  Application.h
Simulador.Bolsa/store/: FIX.4.2-ORDERMATCH-CLIENT1.session  FIX.4.2-SIMULADOR.ORDEM-CLIENT1.body  FIX.4.2-SIMULADOR.ORDEM-CLIENT1.header  FIX.4.2-SIMULADOR.ORDEM-CLIENT1.seqnums  FIX.4.2-SIMULADOR.ORDEM-CLIENT1.session
(+5 files in other folders)
